Se ha conseguido eliminar el error 500 que nos daba. Se ha creado el fichero de routes_categories.
