# public/api-docs/models/swagger.json
@@ -71,6 +71,38 @@
         }
       }
     },
+    "/categories": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Returns all categories",
+        "description": "Returns all categories from the system that the user has access to.",
+        "operationId": "tdw_cget_categories",
+        "responses": {
+          "200": {
+            "description": "Category array response",
+            "schema": {
+              "$ref": "#/definitions/CategoriesArray"
+            }
+          },
+          "401": {
+            "$ref": "#/responses/401_Standard_Response"
+          },
+          "403": {
+            "$ref": "#/responses/403_Forbidden_Response"
+          },
+          "404": {
+            "$ref": "#/responses/404_Resource_Not_Found_Response"
+          }
+        },
+        "security": [
+          {
+            "ResultsSecurity": []
+          }
+        ]
+      }
+    },
     "/questions": {
       "get": {
         "tags": [
@@ -124,7 +156,7 @@
           "201": {
             "description": "`Created` Question created",
             "schema": {
-              "$ref": "#/definitions/Cuestion"
+              "$ref": "#/definitions/Question"
             }
           },
           "400": {
@@ -183,7 +215,7 @@
           "200": {
             "description": "Cuestion",
             "schema": {
-              "$ref": "#/definitions/Cuestion"
+              "$ref": "#/definitions/Question"
             }
           },
           "401": {
@@ -227,7 +259,7 @@
           "209": {
             "description": "`Content Returned` Question previously existed and is now updated",
             "schema": {
-              "$ref": "#/definitions/Cuestion"
+              "$ref": "#/definitions/Question"
             }
           },
           "400": {
@@ -537,7 +569,45 @@
     }
   },
   "definitions": {
-    "Cuestion": {
+    "Category": {
+      "required": [
+        "idCategoria"
+      ],
+      "properties": {
+        "idCategoria": {
+          "description": "Question Id",
+          "type": "integer",
+          "format": "int32"
+        },
+        "prop_descripcion": {
+          "description": "Description question",
+          "type": "string"
+        },
+        "enum_disponible": {
+          "description": "Available question",
+          "type": "boolean"
+        }
+      },
+      "example": {
+        "cuestion": {
+          "idCategoria": 1508,
+          "prop_descripcion": "\u00bfQue es el software?",
+          "enum_disponible": true
+        }
+      }
+    },
+    "CategoriesArray": {
+      "properties": {
+        "categories": {
+          "description": "Categories array",
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Category"
+          }
+        }
+      }
+    },
+    "Question": {
       "required": [
         "enum_descripcion",
         "enum_disponible",
@@ -608,7 +678,7 @@
           "description": "Questions array",
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Cuestion"
+            "$ref": "#/definitions/Question"
           }
         }
       }
@@ -728,6 +798,14 @@
     }
   },
   "parameters": {
+    "idCategoria": {
+      "name": "idCategoria",
+      "in": "path",
+      "description": "ID of category",
+      "required": true,
+      "type": "integer",
+      "format": "int32"
+    },
     "questionId": {
       "name": "questionId",
       "in": "path",
